# Python_DRF

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  setup.cfg
apps/auth/: apps.py
apps/pizza/: apps.py  filter.py  models.py  serializer.py  urls.py  views.py
apps/pizza/migrations/: 0001_initial.py  0002_pizzamodel_pizza_shop.py
apps/pizza_shop/: apps.py  models.py  serializer.py  urls.py  views.py
apps/pizza_shop/migrations/: 0001_initial.py
apps/pizza_shops/: apps.py  models.py  serializer.py  urls.py  views.py
apps/pizza_shops/migrations/: 0001_initial.py
apps/pizzas/: filter.py  models.py  serializer.py  urls.py  views.py
apps/pizzas/migrations/: 0001_initial.py  0002_pizzamodel_pizza_shop.py  0003_pizzamodel_day.py
apps/pizzas_shop/: apps.py  models.py
apps/pizzas_shop/migrations/: 0001_initial.py
apps/user/: models.py  urls.py  views.py
backend/apps/auth/: serializer.py  urls.py  views.py
backend/config/: asgi.py  celery.py  routing.py  settings.py  urls.py
backend/core/: pagination.py
backend/templates/: base.html  recovery.html  register.html  spam.html  test_email.html
client/: asset-manifest.json  index.html
config/: settings.py  urls.py
config/extra_config/: __init__.py  rest_config.py
core/: models.py  pagination.py
core/enums/: regex_enum.py
first/: views.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  index.js  router.js
piza/: apps.py  models.py  serializer.py  views.py
piza/migrations/: 0001_initial.py
pizza/: models.py  serializers.py  views.py
pizza/migrations/: 0001_initial.py
users/: models.py  serializes.py  views.py
users/migrations/: 0001_initial.py
(+57 files in other folders)
